Fri Feb  9 18:07:13 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSTableView.m ([-noteNumberOfRowsChanged]): Fix for nil
	superview on Solaris, where you can't assign 0 to structs
	(solution suggested by Adam Fedor).
	
2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/gui/NSWindow.h: Added a GNUstep specific window
	level for the desktop (to work in conjunction with Window Maker)
	and changed the deprectated dock window level to match the value
	in MacOS-X beta.

Thu Feb  8 19:17:25 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/AppKit.h: Include NSSecureTextField.h.

2001-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: Center title in miniwindow view.

Wed Feb  7 21:44:41 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBrowser.m ([-reloadColumn:]): Save the selected cells
	in the column, then restore them after reloading the column.

Wed Feb  7 20:21:36 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSplitView.m ([-_adjustSubviews]): New method so that we
	avoid posting notifications if the delegate is doing the resizing.
	([-adjustSubviews]): Do not post notifications so it can be called
	by the delegate method.  ([-resizeWithOldSuperviewSize:]): Call
	_adjustSubviews: rather than adjustSubviews:.

	* Headers/gnustep/gui/NSSplitView.h (_never_displayed_before): 
	New ivar.
	* Source/NSSplitView.m ([-initWithFrame:]): Set
	_never_displayed_before to YES.  ([-displayRectIgnoringOpacity:]),
	([-displayIfNeededInRectIgnoringOpacity:]): New methods.  Adjust
	subviews the first time ever the split view is displayed.
	([-addSubview:positioned:relativeTo:]), ([-addSubview:]): Removed.

	* Source/NSFontPanel.m ([-_initWithoutGModel]): Removed hack to
	set sizes of splitview's subviews right - no longer needed.
	
2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: Modified miniwindow view drawing to make titles
	in miniwindows look like NeXT ones.
